# nuwax-robot-bridge

./: .env.example  .gitignore  README.md  compat.py  go2_proxy_server.py  logging_utils.py  requirements-memory-models.txt  requirements.txt  settings.py  智能体提示词参考.md  部署文档.md
adapters/: __init__.py  base.py  helpers.py
contracts/: __init__.py  artifacts.py  base.py  capabilities.py  events.py  frame_semantics.py  geometry.py  image.py  map_workspace.py  maps.py  memory.py  naming.py  navigation.py  perception.py  pointcloud.py  robot_state.py  runtime_views.py  skills.py  spatial_memory.py  tasks.py
control/: __init__.py  joint_config.py  low_level_controller.py
core/: __init__.py  capability_registry.py  event_bus.py  resource_lock.py  safety_guard.py  state_store.py  task_manager.py
deploy/: docker-compose.host-gateway.example.yml  docker-compose.relay-only.example.yml
drivers/: __init__.py
drivers/robots/go2/ros2_ws/src/nuwax_go2_bringup/: package.xml  setup.cfg  setup.py
drivers/robots/go2/ros2_ws/src/nuwax_go2_bringup/config/: go2_elevation_mapping.yaml  go2_nav2.yaml
drivers/robots/go2/ros2_ws/src/nuwax_go2_bringup/launch/: go2_full_stack.launch.py  go2_lidar_mapping.launch.py  go2_nav2.launch.py
drivers/robots/go2/ros2_ws/src/nuwax_go2_bringup/nuwax_go2_bringup/: __init__.py  go2_cmd_vel_bridge.py
drivers/robots/go2/ros2_ws/src/nuwax_go2_bringup/resource/: nuwax_go2_bringup
gateways/: __init__.py  app.py  artifacts.py  auth.py  errors.py  runtime.py  serialization.py
providers/: __init__.py  base.py  exploration.py  image.py  localization.py  (+6 more)
(+139 files in other folders)
