<?xml version="1.0"?>
<package format="3">
  <name>nuwax_go2_bringup</name>
  <version>0.1.0</version>
  <description>Go2 端侧 ROS2 工作空间启动包。</description>

  <maintainer email="ml@example.com">nuwax_robot_bridge</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>point_lio</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>unitree_lidar_ros2</exec_depend>
  <exec_depend>elevation_mapping_cupy</exec_depend>
  <exec_depend>grid_map_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
